Load data tracking
Change-Id: Ia5107274d714b223870500a94a9d662225c5c3b0

--- a/src/cpu/SConscript
+++ b/src/cpu/SConscript
@@ -54,6 +54,7 @@ DebugFlag('ExecKernel', 'Filter: Trace kernel mode instructions')
 DebugFlag('ExecAsid', 'Format: Include ASID in trace')
 DebugFlag('ExecFlags', 'Format: Include instruction flags in trace')
 DebugFlag('Fetch')
+DebugFlag('PC_flag')
 DebugFlag('IntrControl')
 DebugFlag('O3PipeView')
 DebugFlag('PCEvent')
